--- a/MyKnee/res/values/strings.xml
+++ b/MyKnee/res/values/strings.xml
@@ -11,13 +11,13 @@
     <string name="welcome_button">Let\'s get started !</string>
 
     <!-- tutorial page -->
-    <string name="title_tutorial_1">How much does my knee bend?</string>
+    <string name="title_tutorial_1">How far does my knee bend?</string>
     <string name="description_tutorial_1">myKnee, designed by a physical therapist, can measure that!</string>
-    <string name="title_tutorial_2">Attach to your ankle like this...</string>
+    <string name="title_tutorial_2">Attach to your ankle like this:</string>
     <string name="description_tutorial_2">Option 1</string>
     <string name="title_tutorial_3">...or like this.</string>
     <string name="description_tutorial_3">Option 2</string>
-    <string name="title_tutorial_4">Lying on your stomach, bend your knee.</string>
+    <string name="title_tutorial_4">Lying on your stomach, \nbend your knee.</string>
     <string name="description_tutorial_4"></string>
     <string name="title_tutorial_5">Measure and Compare</string>
     <string name="description_tutorial_5"></string>
@@ -47,8 +47,8 @@
     <string name="right">Right</string>
     <string name="button_ready_to_measure">Let\'s get started!</string>
     <string name="button_ready_to_measure_setting">Ready to measure !</string>
-    <string name="textview_measure_start">Start at: </string>
-    <string name="textview_measure_end">End at: </string>
+    <string name="textview_measure_start">Start position: </string>
+    <string name="textview_measure_end">End position: </string>
     <string name="textview_measure_result">Range of Motion: </string>
     <string name="button_measure_again">Measure again</string>
 
